--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "config": "^3.3.7",
+    "dateformat": "^5.0.3",
     "log4js": "^6.4.1",
     "mongodb": "^4.4.0"
   }
